--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>World Clock</h1>
     <footer>
         This project was coded with 💙 by Morelite Mupwanyiwa and is 
-        <a href="#" target="_blank"> open sourced on Github</a>
+        <a href="https://github.com/Morelite/world-clock-project" target="_blank"> open sourced on Github</a>
     </footer>
     <script src="javascript/index.js"></script>
 </body>
